# PyBox

./: .gitignore  README.md  pybox.spec  pyproject.toml
.github/workflows/: ci.yml
samples/: btfl_001.bbl
samples/tuning/: 4s.bbl  ff_0.bbl  ff_05.bbl  ff_10.bbl  i_06.bbl  i_09.bbl  i_12.bbl  m_1.bbl  m_12.bbl  m_14.bbl  m_16.bbl  m_18.bbl  pd_06.bbl  pd_08.bbl  pd_10.bbl  pd_12.bbl  pd_14.bbl  pd_16.bbl
scripts/: compile_translations.py
src/pybox/: __init__.py  cli.py  units.py
src/pybox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pybox/analysis/: __init__.py  filters.py  pid_error.py  spectral.py  statistics.py  step_response.py
src/pybox/decoder/: __init__.py  decoders.py  defs.py  flightlog.py  frames.py  headers.py  stream.py
src/pybox/gui/: __init__.py  app.py  gyro_preview.py  i18n.py  log_panel.py  main_window.py  models.py  settings.py  step_plots.py  theme.py
src/pybox/gui/translations/: pybox_de.ts
tests/: test_analysis.py  test_cli.py  test_decoders.py  test_flightlog.py  test_gui_models.py  test_headers.py  test_stream.py  test_units.py
