[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybox"
version = "0.1.0"
description = "Betaflight Blackbox log decoder and analysis tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPLv3"}
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyinstaller>=6.0",
]
cli = [
    "click>=8.0",
]
gui = [
    "PyQt6>=6.5",
    "pyqtgraph>=0.13",
]

[project.scripts]
pybox = "pybox.cli:main"
pybox-gui = "pybox.gui.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
